Retouches to the ui.

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	<main>
 	<section id="input">
 		<h2>Entrada:</h2>
-		<div contenteditable="true" class="textbox" id="text-input"></div>
+		<div contenteditable="true" spellcheck="false" class="textbox" id="text-input"></div>
 	</section>
 	<section id="output">
 		<h2>Preview:</h2>
