Adds dark mode support

--- a/index.html
+++ b/index.html
@@ -11,13 +11,14 @@
 	<header>
 		<h1>Innotest Markup</h1>
 	</header>
+	<div><input type="checkbox" id="darkmode-picker" name="darkmode"><label for="darkmode">Modo oscuro?</label></div>
 	<main>
 	<section id="input">
 		<h2>Entrada:</h2>
 		<div contenteditable="true" spellcheck="false" class="textbox" id="text-input"></div>
 	</section>
 	<section id="output">
-		<h2>Preview:</h2>
+		<h2>Visa previa:</h2>
 		<div class="textbox" id="text-output"></div>
 	</section>
 	</main>
