Fixes typo in index.html

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		<div contenteditable="true" spellcheck="false" class="textbox" id="text-input"></div>
 	</section>
 	<section id="output">
-		<h2>Visa previa:</h2>
+		<h2>Vista previa:</h2>
 		<div class="textbox" id="text-output"></div>
 	</section>
 	</main>
